    - added new mod.json file version
    - added @globals.modloader(<modname>, <eventname>) annotation
    - improved mod loading stage calling
    - new loading events: "stage:block:factory:finish" and "stage:item:factory:finish"
    - added --fullscreen -flag for enabling fullscreen on startup [unstable at the moment]
    - improved error message when world save not found on load

    fixed bugs:
        - state of block may not be set correctly in some cases
        - memory leak with block inventories
        - offhand slot gets cleared when closing inventory
        - memory leak with block instances
        - crash when build-folder was deleted

    planned:
        - search why generation takes so long [issue 166]
        - speed up chunk accessing [issue 164 & 165]
        - fix issue 137, 161
        - optimize world storage (also issue 159)
        - check for the reason of issue 157 and fix if possible


changelog of snapshot 20w14a
    - added new event: "stage:blockitemfactory:finish"
    - cleaned up base classes for block and item
    - chunk entries containing positions are mostly stored relative to the chunk decreasing save file size
    - changed some internal inventory interaction things
    - on_shift_click can now return True when it should interrupt the following logic
    - slots can now handle an key press
    - rewritten mouse interaction system to support dragging over more than one slot & better shift-clicking
    - moved Entity-class into entity/Entity.py
    - entities are now saved in saves
    - added EntityHandler with entity-registry
    - made function draw and tick called of entity
    - added EntityRenderer with parser of model files
    - added renderer for player
    - added saves for entities
    - added /summon command
    - added loading phase for entities
    - added player skins based on the player name downloaded from the official mojang servers

    fixed bugs: