@@ -6,15 +6,15 @@ original game "minecraft" by Mojang (www.minecraft.net)
 mod loader inspired by "minecraft forge" (https://github.com/MinecraftForge/MinecraftForge)
 
 blocks based on 1.15.2.jar of minecraft, downloaded on 1th of February, 2020"""
-import traceback
-from datetime import datetime
-import globals as G
 import os
-import sys
-import config
 import platform
 import random
+import sys
+from datetime import datetime
 
+import config
+import globals as G
+import traceback
 
 # adapted from mc version 1.15.2, decompiled with mc-forge located under net.minecraft.crash.CrashReport
 # added some extra entries
@@ -22,7 +22,8 @@ FUNNY_STRINGS = [
     "Who set us up the TNT?", "Everything's going to plan. No, really, that was supposed to happen.",
     "Uh... Did I do that?", "Oops.", "Why did you do that?", "I feel sad now :(", "My bad.", "I'm sorry, Dave.",
     "I let you down. Sorry :(", "On the bright side, I bought you a teddy bear!", "Daisy, daisy...",
-    "Oh - I know what I did wrong!", "Hey, that tickles! Hehehe!", "I blame Dinnerbone. Seriously, he has here no fault",
+    "Oh - I know what I did wrong!", "Hey, that tickles! Hehehe!",
+    "I blame Dinnerbone. Seriously, he has here no fault",
     "You should try our sister game, Minceraft!", "Don't be sad. I'll do better next time, I promise!",
     "Don't be sad, have a hug! <3", "I just don't know what went wrong :(", "Shall we play a game?",
     "Quite honestly, I wouldn't worry myself about that.", "I bet Cylons wouldn't have this problem.",
@@ -34,28 +35,33 @@ FUNNY_STRINGS = [
     "Warning: your game has crashed!"
 ]
 
+if not os.path.exists(G.local + "/logs"):
+    os.makedirs(G.local + "/logs")
 
-if not os.path.exists(G.local+"/logs"):
-    os.makedirs(G.local+"/logs")
-
-
-log_file = datetime.now().strftime(G.local+"/logs/log_%d.%m.%y_%H.%M.%S.txt")
+log_file = datetime.now().strftime(G.local + "/logs/log_%d.%m.%y_%H.%M.%S.txt")
 inter_home = os.path.dirname(sys.executable).replace("\\", "/")
 
 
-def println(*msg, sep=" ", end="\n", write_into_console=True):
+def println(*msg, sep=" ", end="\n", write_into_console=True, write_into_log_file=True):
     msg = [str(e).replace("\\", "/").replace(G.local, "%LOCAL%").replace(inter_home, "%PYTHON%") for e in msg]
     if write_into_console: print(*msg, sep=sep, end=end)
-    with open(log_file, mode="a") as f:
-        # print(datetime.now().strftime("\n[timestamp: %H.%M.%S]"), file=f)
-        print(*msg, sep=sep, end=end, file=f)
+    if write_into_log_file:
+        with open(log_file, mode="a") as f:
+            print(*msg, sep=sep, end=end, file=f)
 
 
 def write_exception(*info):
-    println("[ERROR][EXCEPTION] gotten exception", write_into_console=False)
-    println(*info, write_into_console=False)
-    data = traceback.format_exc().replace("\\", "/").replace(G.local, "%LOCAL%").replace(inter_home, "%PYTHON%")
-    println(data, write_into_console=False)
+    console = not config.WRITE_NOT_FORMATTED_EXCEPTION
+    println("[ERROR][EXCEPTION] gotten exception", write_into_console=console)
+    println("-", *["\n-".join(info)], sep="", write_into_console=console)
+    sdata = traceback.format_stack()[:-2]
+    data = traceback.format_exc().replace("\\", "/").replace(G.local, "%LOCAL%").replace(inter_home, "%PYTHON%").split(
+        "\n")
+    println(data[0], "\n", "".join(sdata), "\n".join(data[1:]), write_into_console=console)
+    if config.WRITE_NOT_FORMATTED_EXCEPTION:
+        println(info, write_into_log_file=False)
+        traceback.print_stack()
+        traceback.print_exc()
 
 
 println("""MCPYTHON version {} ({}) running on {}
@@ -70,4 +76,3 @@ python version: {}, implementation: {}
 
 def add_funny_line():
     println(random.choice(FUNNY_STRINGS), write_into_console=False)
-
